Correcting spacing in article grid and added extra @media rule

--- a/src/sass/components/_article.scss
+++ b/src/sass/components/_article.scss
@@ -26,23 +26,60 @@
     grid-template-columns: repeat(6, 1fr);
     gap: 3em 2em;
 
-    > * {
-        &:first-child {
-            grid-column: 1 / -1;
-            display: flex;
+    & > * {
+        grid-column: 1 / -1;
+    }
+
+    > .article-preview:first-child > * + * {
+        margin-top: var(--flow-spacer, 1em);
+    }
+}
+
+@media (min-width: 30em) {
+    .article-grid > *:not(:first-child) {
+        grid-column: span 3;
+    }
+}
+
+@media (min-width: 40em) {
+    .article-grid {
+        > .article-preview:first-child {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr min-content 1fr;
+            gap: 1em 2em;
+
+            img {
+                grid-row: span 3;
+                height: 17rem;
+            }
+
+            h3 {
+                margin-top: auto;
+            }
+
+            &__info {
+                margin-bottom: auto;
+            }
         }
-        &:nth-child(2),
-        &:nth-child(3) {
-            grid-column: span 3;
-        }
-        &:nth-child(4),
-        &:nth-child(5),
-        &:nth-child(6) {
-            grid-column: span 2;
-        }
-        &:nth-child(7),
-        &:nth-child(8) {
-            grid-column: span 3;
+
+        > * {
+            &:first-child {
+                grid-column: 1 / -1;
+            }
+            &:nth-child(2),
+            &:nth-child(3) {
+                grid-column: span 3;
+            }
+            &:nth-child(4),
+            &:nth-child(5),
+            &:nth-child(6) {
+                grid-column: span 2;
+            }
+            &:nth-child(7),
+            &:nth-child(8) {
+                grid-column: span 3;
+            }
         }
     }
 }
